--- a/index.html
+++ b/index.html
@@ -19,26 +19,44 @@
   <body>
     <header>
       <h2>
-        <a class="final_page" href="./index.html">El Arte de Alimentarse</a>
+        <a class="final_page" href="./index.html">English Advance</a>
       </h2>
       <nav>
         <ul>
           <li>
             <div class="logo">
               <i class="fas fa-bread-slice"></i>
-              <a href="./html/pan_de_avena.html">Pan de avena</a>
+              <a href="./html/pan_de_avena.html">Alphabet</a>
             </div>
           </li>
           <li>
             <div class="logo">
               <i class="fas fa-utensils"></i>
-              <a href="./html/panqueques.html">Panqueques</a>
+              <a href="./html/panqueques.html">Common Phrases</a>
             </div>
           </li>
           <li>
             <div class="logo">
               <i class="fas fa-seedling"></i>
-              <a href="./html/avena_transnochada.html">Avena transnochada</a>
+              <a href="./html/avena_transnochada.html">Greetings</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-seedling"></i>
+              <a href="./html/avena_transnochada.html">Cardinal and Ordinal</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-seedling"></i>
+              <a href="./html/avena_transnochada.html"> Asking and Answering</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-seedling"></i>
+              <a href="./html/avena_transnochada.html">Classroom Language</a>
             </div>
           </li>
         </ul>
@@ -92,11 +110,6 @@
         <a href="./html/avena_transnochada.html" class="highlighted"
           >avena trasnochada</a
         >
-      </p>
-
-      <p class="center">
-        La dirección de contacto se encuentra
-        <a href="#formulario-contacto" data>aquí</a>.
       </p>
 
       <div id="carrousel">
