--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Sofia Torres" />
+    <meta name="author" content="Kenneth and Christofer" />
     <meta
       name="description"
-      content="Sitio web sobre los beneficios de la avena para la salud"
+      content="Website about the benefits of oats for health"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Beneficios de la avena</title>
+    <title>English Topics</title>
   </head>
   <body>
     <header>
@@ -25,38 +25,38 @@
         <ul>
           <li>
             <div class="logo">
-              <i class="fas fa-bread-slice"></i>
-              <a href="./html/pan_de_avena.html">Alphabet</a>
+              <i class="fas fa-book"></i>
+              <a href="./html/alphabet.html">Alphabet</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-utensils"></i>
-              <a href="./html/panqueques.html">Common Phrases</a>
+              <i class="fas fa-comments"></i>
+              <a href="./html/common_phrases.html">Common Phrases</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-seedling"></i>
-              <a href="./html/avena_transnochada.html">Greetings</a>
+              <i class="fas fa-handshake"></i>
+              <a href="./html/greetings.html">Greetings</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-seedling"></i>
-              <a href="./html/avena_transnochada.html">Cardinal and Ordinal</a>
+              <i class="fas fa-sort-numeric-down"></i>
+              <a href="./html/cardinal_ordinal.html">Cardinal and Ordinal</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-seedling"></i>
-              <a href="./html/avena_transnochada.html"> Asking and Answering</a>
+              <i class="fas fa-question-circle"></i>
+              <a href="./html/asking_answering.html"> Asking and Answering</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-seedling"></i>
-              <a href="./html/avena_transnochada.html">Classroom Language</a>
+              <i class="fas fa-chalkboard"></i>
+              <a href="./html/classroom_objects.html">Classroom Language</a>
             </div>
           </li>
         </ul>
@@ -66,50 +66,54 @@
     <div class="container">
       <img
         class="background-image"
-        src="./img/avena_header.jpg"
+        src="./img/english-hub.png"
         alt="Imagen de fondo"
       />
       <div class="overlay"></div>
       <div class="content">
-        <h1>¿Cuáles son los beneficios de la avena para tu salud?</h1>
+        <h1>Welcome to English Topics</h1>
         <p>
-          Cereal de cañas delgadas, hojas estrechas, flores en panoja y semilla
-          que sirve de alimento para las personas y los animales.
+          Explore a variety of essential English topics to enhance your language
+          skills and fluency. Whether you're mastering the alphabet, learning
+          common phrases, practicing greetings, or delving into more advanced
+          topics like cardinal and ordinal numbers, asking and answering
+          questions, or classroom language, we have resources to support your
+          learning journey.
         </p>
       </div>
     </div>
 
     <div class="main contenedor shadow">
-      <p>Sus beneficios:</p>
-      <ul>
-        <div>
-          <li>Contiene importantes nutrientes, vitaminas y minerales.</li>
-          <li>Alto contenido en fibra soluble.</li>
-          <li>Facilita el tránsito intestinal y evita el estreñimiento.</li>
-          <li>Rico en proteínas.</li>
-        </div>
-        <div>
-          <img src="./img/naranja.png" loading="lazy" alt="" width="300" />
-        </div>
-      </ul>
+      <h2>Welcome to English Learning Hub</h2>
+      <p>
+        Embark on a journey through essential English language topics designed
+        to enrich your language skills and broaden your fluency.
+      </p>
+      <p>Explore:</p>
 
-      <p>Además,</p>
+        <div>
+          <li>The Alphabet</li>
+          <li>Common Phrases</li>
+          <li>Greetings</li>
+          <li>Cardinal and Ordinal Numbers</li>
+          <li>Asking and Answering Questions</li>
+          <li>Classroom Objects</li>
+        </div>
+
       <p>
-        Ayuda a prevenir males como el hipotiroidismo, el colesterol alto, la
-        desmineralización, el riesgo de cáncer, etc...
+        Just as each ingredient in a recipe contributes to its overall flavor,
+        mastering these English topics forms the foundation for effective
+        communication in both personal and professional settings.
       </p>
       <p>
-        Es recomendable incluir la avena en la dieta diaria y totalmente
-        compatible con un estilo de vida saludable.
+        Dive into each topic to uncover its significance and practical
+        application, paving the way for a deeper understanding of the English
+        language and enhancing your ability to engage confidently in various
+        contexts.
       </p>
       <p>
-        Puede consumirse por sí sola, o prepararse en diversas y deliciosas
-        recetas, como el
-        <a href="./html/pan_de_avena.html" class="highlighted">pan de avena</a>,
-        <a href="./html/panqueques.html" class="highlighted">panqueques</a> y
-        <a href="./html/avena_transnochada.html" class="highlighted"
-          >avena trasnochada</a
-        >
+        Begin your exploration now and unlock the doors to greater linguistic
+        proficiency!
       </p>
 
       <div id="carrousel">
@@ -122,12 +126,12 @@
       </div>
 
       <p class="final_page center">
-        Recuerda que una dieta adecuada tiene variedad y te permite disfrutar de
-        tus comidas.
+        Remember that a diverse diet of English topics allows you to enjoy the
+        richness of the language.
       </p>
     </div>
     <div class="footer">
-      <p>Derechos reservados &copy;. El Arte de Alimentarse, 2023.</p>
+      <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
     </div>
     <script src="./js/carrousel.js"></script>
     <script src="./js/scrollToDiv.js"></script>
