--- a/html/asking_answering.html
+++ b/html/asking_answering.html
@@ -14,36 +14,56 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Panqueques</title>
+    <title>Asking and Answering</title>
   </head>
   <body>
     <header>
-      <h2><a href="../index.html">El Arte de Alimentarse</a></h2>
+      <h2>
+        <a class="final_page" href="/index.html">English Advance</a>
+      </h2>
       <nav>
         <ul>
           <li>
             <div class="logo">
-              <i class="fas fa-bread-slice"></i>
-              <a href="./pan_de_avena.html">Pan de avena</a>
+              <i class="fas fa-book"></i>
+              <a href="/html/alphabet.html">Alphabet</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-utensils"></i>
-              <a class="final_page" href="./panqueques.html">Panqueques</a>
+              <i class="fas fa-comments"></i>
+              <a href="/html/common_phrases.html">Common Phrases</a>
             </div>
           </li>
           <li>
             <div class="logo">
-              <i class="fas fa-seedling"></i>
-              <a href="./avena_transnochada.html">Avena transnochada</a>
+              <i class="fas fa-handshake"></i>
+              <a href="/html/greetings.html">Greetings</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-list-ol"></i>
+              <a href="/html/cardinal_ordinal.html">Cardinal and Ordinal</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-question-circle"></i>
+              <a class="final_page" href="/html/asking_answering.html">Asking and Answering</a>
+            </div>
+          </li>
+          <li>
+            <div class="logo">
+              <i class="fas fa-chalkboard"></i>
+              <a href="/html/classroom_objects.html">Classroom Language</a>
             </div>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Panqueques</h1>
+      <h1>Asking and Answering Questions</h1>
       <section class="main contenedor shadow">
         <div class="info_principal">
           <div class="text-column">
@@ -171,13 +191,9 @@
           de tus comidas.
         </p>
       </section>
-      <p class="center">
-        La dirección de contacto se encuentra
-        <a href="../index.html#formulario-contacto">aquí</a>.
-      </p>
     </main>
     <div class="footer">
-      <p>Derechos reservados &copy;. El Arte de Alimentarse, 2023.</p>
+      <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
     </div>
     <script src="../js/collapse.js"></script>
     <script src="../js/scrollToDiv.js"></script>
