--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -62,7 +62,7 @@
         </ul>
       </nav>
     </header>
-    
+
     <main>
       <h1>The Alphabet</h1>
       <section class="main contenedor shadow">
@@ -85,7 +85,12 @@
             </p>
           </div>
           <div class="image-column">
-            <img src="../img/avena_transnochada.jpg" loading="lazy" width="240" alt="avena_transnochada" />
+            <img
+              src="../img/avena_transnochada.jpg"
+              loading="lazy"
+              width="240"
+              alt="avena_transnochada"
+            />
           </div>
         </div>
         <button
