--- a/index.html
+++ b/index.html
@@ -1,139 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Kenneth and Christofer" />
-    <meta
-      name="description"
-      content="Website about the benefits of oats for health"
-    />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <title>English Topics</title>
-  </head>
-  <body>
-    <header>
-      <h2>
-        <a class="final_page" href="./index.html">English Advance</a>
-      </h2>
-      <nav>
-        <ul>
-          <li>
-            <div class="logo">
-              <i class="fas fa-book"></i>
-              <a href="./html/alphabet.html">Alphabet</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-comments"></i>
-              <a href="./html/common_phrases.html">Common Phrases</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-handshake"></i>
-              <a href="./html/greetings.html">Greetings</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-sort-numeric-down"></i>
-              <a href="./html/cardinal_ordinal.html">Cardinal and Ordinal</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-question-circle"></i>
-              <a href="./html/asking_answering.html"> Asking and Answering</a>
-            </div>
-          </li>
-          <li>
-            <div class="logo">
-              <i class="fas fa-chalkboard"></i>
-              <a href="./html/classroom_objects.html">Classroom Language</a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <div class="container">
-      <img
-        class="background-image"
-        src="./img/english-hub.png"
-        alt="Imagen de fondo"
-      />
-      <div class="overlay"></div>
-      <div class="content">
-        <h1>Welcome to English Topics</h1>
-        <p>
-          Explore a variety of essential English topics to enhance your language
-          skills and fluency. Whether you're mastering the alphabet, learning
-          common phrases, practicing greetings, or delving into more advanced
-          topics like cardinal and ordinal numbers, asking and answering
-          questions, or classroom language, we have resources to support your
-          learning journey.
-        </p>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Kenneth and Christofer" />
+  <meta name="description" content="Website about the benefits of oats for health" />
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>English Topics</title>
+</head>
+
+<body>
+  <header>
+    <h2>
+      <a class="final_page" href="./index.html">English Advance</a>
+    </h2>
+    <nav>
+      <ul>
+        <li>
+          <div class="logo">
+            <i class="fas fa-book"></i>
+            <a href="./html/alphabet.html">Alphabet</a>
+          </div>
+        </li>
+        <li>
+          <div class="logo">
+            <i class="fas fa-comments"></i>
+            <a href="./html/common_phrases.html">Common Phrases</a>
+          </div>
+        </li>
+        <li>
+          <div class="logo">
+            <i class="fas fa-handshake"></i>
+            <a href="./html/greetings.html">Greetings</a>
+          </div>
+        </li>
+        <li>
+          <div class="logo">
+            <i class="fas fa-sort-numeric-down"></i>
+            <a href="./html/cardinal_ordinal.html">Cardinal and Ordinal</a>
+          </div>
+        </li>
+        <li>
+          <div class="logo">
+            <i class="fas fa-question-circle"></i>
+            <a href="./html/asking_answering.html"> Asking and Answering</a>
+          </div>
+        </li>
+        <li>
+          <div class="logo">
+            <i class="fas fa-chalkboard"></i>
+            <a href="./html/classroom_objects.html">Classroom Language</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="container">
+    <img class="background-image" src="./img/english-hub.png" alt="Imagen de fondo" />
+    <div class="overlay"></div>
+    <div class="content">
+      <h1>Welcome to English Topics</h1>
+      <p>
+        Explore a variety of essential English topics to enhance your language
+        skills and fluency. Whether you're mastering the alphabet, learning
+        common phrases, practicing greetings, or delving into more advanced
+        topics like cardinal and ordinal numbers, asking and answering
+        questions, or classroom language, we have resources to support your
+        learning journey.
+      </p>
+    </div>
+  </div>
+
+  <div class="main contenedor shadow">
+    <h2>Welcome to English Learning Hub</h2>
+    <p>
+      Embark on a journey through essential English language topics designed
+      to enrich your language skills and broaden your fluency.
+    </p>
+    <p>Explore:</p>
+
+    <div>
+      <li>The Alphabet</li>
+      <li>Common Phrases</li>
+      <li>Greetings</li>
+      <li>Cardinal and Ordinal Numbers</li>
+      <li>Asking and Answering Questions</li>
+      <li>Classroom Objects</li>
     </div>
 
-    <div class="main contenedor shadow">
-      <h2>Welcome to English Learning Hub</h2>
-      <p>
-        Embark on a journey through essential English language topics designed
-        to enrich your language skills and broaden your fluency.
-      </p>
-      <p>Explore:</p>
+    <p>
+      Just as each ingredient in a recipe contributes to its overall flavor,
+      mastering these English topics forms the foundation for effective
+      communication in both personal and professional settings.
+    </p>
+    <p>
+      Dive into each topic to uncover its significance and practical
+      application, paving the way for a deeper understanding of the English
+      language and enhancing your ability to engage confidently in various
+      contexts.
+    </p>
+    <p>
+      Begin your exploration now and unlock the doors to greater linguistic
+      proficiency!
+    </p>
 
-        <div>
-          <li>The Alphabet</li>
-          <li>Common Phrases</li>
-          <li>Greetings</li>
-          <li>Cardinal and Ordinal Numbers</li>
-          <li>Asking and Answering Questions</li>
-          <li>Classroom Objects</li>
-        </div>
-
-      <p>
-        Just as each ingredient in a recipe contributes to its overall flavor,
-        mastering these English topics forms the foundation for effective
-        communication in both personal and professional settings.
-      </p>
-      <p>
-        Dive into each topic to uncover its significance and practical
-        application, paving the way for a deeper understanding of the English
-        language and enhancing your ability to engage confidently in various
-        contexts.
-      </p>
-      <p>
-        Begin your exploration now and unlock the doors to greater linguistic
-        proficiency!
-      </p>
-
-      <div id="carrousel">
+    <!-- <div id="carrousel">
         <img
           id="carrousel-image"
           src="js/../img/avena_img.jpg"
           alt="imagen_avena"
           loading="lazy"
         />
-      </div>
+      </div> -->
 
-      <p class="final_page center">
-        Remember that a diverse diet of English topics allows you to enjoy the
-        richness of the language.
-      </p>
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="/img/alphabet.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="/img/50-Phrases-With-Meanings.png" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="/img/Greetings-in-English-2.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="/img/cardinal-ordinal-roman-numerals.png" class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="footer">
-      <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
-    </div>
-    <script src="./js/carrousel.js"></script>
-    <script src="./js/scrollToDiv.js"></script>
-  </body>
+
+    <p class="final_page center">
+      Remember that a diverse diet of English topics allows you to enjoy the
+      richness of the language.
+    </p>
+  </div>
+  <div class="footer">
+    <p>© All rights reserved. Kenneth and Christofer, 2024.</p>
+  </div>
+  <script src="./js/carrousel.js"></script>
+  <script src="./js/scrollToDiv.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
